# Sniffer

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  cmake.yml
apps/: main.cpp
include/: capturePackets.hpp  filterPackets.hpp
modules/: FindPCAP.cmake
source/: capturePackets.cpp  filterPackets.cpp
tests/: testfile.cpp
